Test now working, added screenshot

--- a/output/team.html
+++ b/output/team.html
@@ -25,66 +25,14 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Tom</h2>
+        <h2 class="card-title"></h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: TRN</li>
-            <li class="list-group-item">Email: <a href="mailto:TRN@email.com">TRN@email.com</a></li>
-            <li class="list-group-item">Office number: 336.555.1212</li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Jane</h2>
-        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: JaneDoe</li>
-            <li class="list-group-item">Email: <a href="mailto:JaneDoe@email.com">JaneDoe@email.com</a></li>
-            <li class="list-group-item">Office number: 336.555.1213</li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Bob</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: BobTheBuilder</li>
-            <li class="list-group-item">Email: <a href="mailto:Bob@email.com">Bob@email.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/Github.bobthebuilder.git" target="_blank" rel="noopener noreferrer">Github.bobthebuilder.git</a></li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Ken</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: Temp1</li>
-            <li class="list-group-item">Email: <a href="mailto:Temp1@email.com">Temp1@email.com</a></li>
-            <li class="list-group-item">School: UNCG</li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Barbie</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: Temp2</li>
-            <li class="list-group-item">Email: <a href="mailto:Temp2@email.com">Temp2@email.com</a></li>
-            <li class="list-group-item">School: UNCG</li>
+            <li class="list-group-item">ID: </li>
+            <li class="list-group-item">Email: <a href="mailto:"></a></li>
+            <li class="list-group-item">Office number: </li>
         </ul>
     </div>
 </div>
