--- a/output/team.html
+++ b/output/team.html
@@ -25,14 +25,53 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title"></h2>
+        <h2 class="card-title">Tom</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: </li>
-            <li class="list-group-item">Email: <a href="mailto:"></a></li>
-            <li class="list-group-item">Office number: </li>
+            <li class="list-group-item">ID: TRN</li>
+            <li class="list-group-item">Email: <a href="mailto:Tom@email.com">Tom@email.com</a></li>
+            <li class="list-group-item">Office number: 336.555.1212</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Jane</h2>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: JaneDoe</li>
+            <li class="list-group-item">Email: <a href="mailto:Jane@email.com">Jane@email.com</a></li>
+            <li class="list-group-item">Office number: 336.555.1211</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Bob</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: Builder</li>
+            <li class="list-group-item">Email: <a href="mailto:Bob@email.com">Bob@email.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/https://github.com/TRNisbet" target="_blank" rel="noopener noreferrer">https://github.com/TRNisbet</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Kim</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: Temp</li>
+            <li class="list-group-item">Email: <a href="mailto:Temp1@email.com">Temp1@email.com</a></li>
+            <li class="list-group-item">School: UNCW</li>
         </ul>
     </div>
 </div>
